--- a/homework.rmd
+++ b/homework.rmd
@@ -17,7 +17,7 @@ bibliography: bib.bibtex
 biblio-style: authoryear
 link-citations: true
 urlcolor: blue
-abstract: Using publicly available genomic data and additionally produced NGS data we attempt to resolve the systematic position of the neodermata. A supermatrix of 313 BUSO genes was used with raxml to build a phylogenetic tree. Result suggest a monphyly of Polyopisthocotyleans (Monogenea) and Trematoda closely related to the Cestoda. Monopisthocotyleans (Monogenea) seem to be the most basal group of neodermata. This new insight shows that the Monogeans are a polyphyletic group and that the ectoparasitic and simple livestyle can be regarded as the basal lifestyle, from which endoparastitism evolved. This new insight opens a discussion if life-style (ecto- vs. endoparasitic) and life history (simple vs. complex) could have evolved two times in the neodermata group. Close relationship between Polyopisthocotylean (Monogenea) and Trematoda could explain similar feeding habits between those two taxa.
+abstract: Using publicly available genomic data and additionally produced NGS data we attempt to resolve the systematic position of the neodermata. A supermatrix of 313 BUSCO genes was used to build a phylogenetic tree. Results suggest a monphyly of Polyopisthocotyleans (Monogenea) and Trematoda as a sister group of the Cestoda. Monopisthocotyleans (Monogenea) seem to be the most basal group of neodermata. This new insight shows that the Monogeans are a polyphyletic group and that the ectoparasitic and simple livestyle can be regarded as the basal lifestyle, from which endoparastitism evolved. This new insight opens a discussion if life-style (ecto- vs. endoparasitic) and life history (simple vs. complex) could have evolved two times in the neodermata group. The close relationship between the Polyopisthocotylea (Monogenea) and Trematoda could explain similar feeding habits between those two groups.
 ---
 ```{r global_options, include=FALSE}
 # this tells r to fix images on positions were I want them and don't let LaTeX shuffle them around like crazy
@@ -27,14 +27,13 @@ library("tidyverse")
 
 # Introduction
 
-Neodermata are obligate parasitic plathelminthes, subsuming three groups of flatworms including the Trematoda (flukes), Cestoda (tapeworms) and the Monogenea [@littlewood1999; @park2007; @gibson2014]. Most Trematodes and Cestodes are endoparasitic with a complex life cycle, while Monogeneans are mainly adjusted to a ectoparasitic lifestyle with a direct life cycle [@gibson2014]. The Monogeneans, which mostly parasite aquatic vertebrates, can be further subdivided into two groups: The Polyopisthocotyleans, that possess more complex haptors, with clamps and minuscule hooks, and are comprised mostly of blood-feeders that attach to the gills of their hosts, and the Monopisthocotyleans, which possess more simple haptors, only hooks, and can be found on skin or gills and feed on skin and or mucus [@gibson2014].
+Neodermata are obligate parasitic flatworms, subsuming three groups of plathelminthes including the Trematoda (flukes), Cestoda (tapeworms) and the Monogenea [@littlewood1999; @park2007; @gibson2014]. Most Trematodes and Cestodes are endoparasitic with a complex life cycle, while Monogeneans are mainly adjusted to a ectoparasitic lifestyle with a direct life cycle [@gibson2014]. The Monogeneans, which mostly parasite aquatic vertebrates, can be further subdivided into two groups: The Polyopisthocotyleans, that possess more complex haptors, with clamps and minuscule hooks, and are comprised mostly of blood-feeders that attach to the gills of their hosts, and the Monopisthocotyleans, which possess more simple haptors with hooks only, and can be found on skin or gills and feed on skin and or mucus [@gibson2014].
 
-The evolutionary history of these three groups, as well as the origin of their differing life cycles (complex vs. simple) and the origin of the differing parasitic lifestyles (endo-/ectoparasitism) have been and are extensively debated. To gain more insight into the evolutionary history of the neodermata the phylogenetic position of the Monogeneans has to be resolved [@park2007].  At the moment there are multiple competing hypotheses about the correct evolutionary history of the neodermata [@littlewood1999; @olson2001; @lockyer2003; @perkins2010; @laumer2014]. 
+The evolutionary history of these three groups, as well as the origin of their differing life cycles (complex vs. simple) and the origin of the differing parasitic lifestyles (endo-/ectoparasitism) have been and are extensively debated [@littlewood1999; @olson2001; @lockyer2003; @perkins2010; @laumer2014]. To gain more insight into the evolutionary history of the neodermata the phylogenetic position of the Monogeneans has to be resolved [@park2007].
 
-A special species in our group was the monogenean *Dictyocotyle coeliaca*, which belongs to the subsclass of Monopisthocotyleans. The taxa is quite rare and morphologically specialized [@dawes1948; @dawes1958]. It can be found in the cœlom of its hosts where it was found multiple times on liver tissue [@dawes1948]. Possible hosts include a variety of deep sea rays, like *Raja radiata* and *R. lintea* [@dawes1948]. *D. coeliaca* belongs to the group of Monopisthocotyleans.
+A special species in our group was the monogenean *Dictyocotyle coeliaca*, which belongs to the subsclass of Monopisthocotyleans. The taxa is quite rare and morphologically specialized [@dawes1948; @dawes1958]. It can be found in the cœlom of its hosts where it was detected multiple times on liver tissue [@dawes1948]. Possible hosts include a variety of deep sea rays, like *Raja radiata* and *R. lintea* [@dawes1948]. *D. coeliaca* belongs to the group of Monopisthocotyleans.
 
-
-The aim of this study is to add findings to the controversely discussed phylogeny of the neodermata with a special focus on the positioning of the monogeneans. We want to accomplishe this by producing genome assemblies for more monogenean species ((*D. coeliaca* and *Leptocotyle minor*) and resolving the phylogeny with the addition of openly accessible NCBI data of further neodermata.
+The aim of this study is to add findings to the controversely discussed phylogeny of the neodermata with a special focus on the positioning of the monogeneans. We want to accomplish this by producing genome assemblies for more monogenean species (*D. coeliaca* and *Leptocotyle minor*) and resolve the phylogeny with the addition of openly accessible NCBI data of further neodermata.
 
 # Material and Methods
 
@@ -42,7 +41,7 @@ The aim of this study is to add findings to the controversely discussed phylogen
 
 The specimen of *D. coeliaca* were sampled in Norway from the host species *R. radiata*. The Zymo Research DNA Miniprep Plus Kit was used to extract DNA. After the extraction the concentration and length distribution were assessed with a Qubit 4 Flourometer using the broad range assay resulting in an concentration of 69.6ng/µl. The TapeStation 2200 (Agilent Technologies) was used to assess the size distribution, using genomic DNA Screen Tapes , see fig. \@ref(fig:tapestation). To reach the recommended concentration of 1µg of high molecular weight DNA two sample specimen (20µl B164-65, 21µl B161-63) were pooled for the library preparation. Library preparation was done using the Nanopore Ligation Sequencing Kit (SQK-LSK109). To enrich sequences with a length of 3kb or longer, we used the long frame buffer following the protocol (Lab Protocol Version `GDE_9063_v109_revT_14Aug2019` which is deposited on a github repository: [AMEB 2020 practical](https://github.com/chrishah/AMEB_2020_practical)).
 
-The concentration of the prepared library was assessed using a Qubit 4 Flourometer. Quality assessment in library preparation followed the lab manual. The first Qubit measurement for *D. coeliaca* did result in 12.4ng/µl (total 744ng) and the second in 47.2ng/µl (total 660.8ng). For sequencing we used the minION platform of the Oxford Nanopore Technologies (ONT). The loading concentration of DNA in our samples was 566.4 ng. Additionally DNA sequencing was also conducted by a second group of the practical course for the second monogenen species, *L. minor*.
+The concentration of the prepared library was assessed using a Qubit 4 Flourometer. Quality assessment in library preparation followed the lab manual. The first Qubit measurement for the *D. coeliaca* library did result in 12.4ng/µl (total 744ng) and the second in 47.2ng/µl (total 660.8ng). For sequencing we used the minION platform of the Oxford Nanopore Technologies (ONT). The loading concentration of DNA in our samples was 566.4 ng. Additionally DNA sequencing for the second monogenean species, *L. minor* was conducted by a second group of the practical course.
 
 (ref:tape-label) TapeStation, Analysis Software A.02.01 SR1, report for *D. coeliaca*
 
@@ -73,7 +72,7 @@ knitr::kable(
 
 ## Genome Assembly
 
-Most of the utilized software is stored in docker containers. The genome assembly and tree caclulation was done on a computer cluster with docker^[https://www.docker.com/] containers via singularity [@kurtzer2017].
+Most of the utilized software is stored in docker containers. The genome assembly and tree calculation was executed on a computer cluster with docker^[https://www.docker.com/] containers via singularity [@kurtzer2017].
 
 In addition to the minION reads we also used local available Illumina reads of high quality. Illumina reads were trimmed with TRIMMOMATIC^[docker://chrishah/trimmomatic-docker:0.38], for settings see code definition \@ref(def:code) [@bolger2014].
 
@@ -93,7 +92,7 @@ Assembly of contigs and scaffolds was conducted with PLATANUS^[docker://chrishah
 
 On all samples including our sequenced samples a BUSCO^[docker://chrishah/busco-docker:v3.1.0] analysis was run for (gene prediction) gene labeling and quality control. The Metazoa `metazoa_odb9` lineage dataset was used with mode `genome`, self-training August optimization mode (`--long`), because our given non-model species, and `schistosoma` in the species select flag.
 
-The phylogenetic tree building was archived with a `snakemake` workflow [@koster2012]. The workflow was generated by Christoph Hahn from the University of Graz and can be accessed via GitHub Repository^[https://github.com/chrishah/AMEB_HPC_Snakemake]. It uses a custom script to extract ortholog and paralog genes from BUSCO, sequence aligning with clustalW, post alignment rating and masking with ALISCORE and ALICUT and raxml for protein gene model finding of each gene and single tree building, post-filtering with ncbi-BLAST and FASconCAT to generate a multigene alignment tree, which can be used to create a supermatrix. The tree calculation using all genes in the matrix was done with raxml. Full list of software and usage can be found in table \@ref(tab:software).
+The phylogenetic tree building was archived with a `snakemake` workflow [@koster2012]. The workflow was generated by Christoph Hahn from the University of Graz and can be accessed via GitHub Repository^[https://github.com/chrishah/AMEB_HPC_Snakemake]. It uses a custom script to extract ortholog and paralog genes from BUSCO, sequence aligning with clustalo, post alignment rating and filtering with ALISCORE and ALICUT and uses raxml to identify the best model of protein evolution for each gene and build single gene trees. FASconCAT was used to concatenate all trimmed alignments and create a supermatrix. The tree calculation using all genes in the matrix was done with raxml. Full list of software and usage can be found in table \@ref(tab:software).
 
 ```{r software, echo=FALSE}
 t <- read.csv("data/software.csv")
@@ -113,7 +112,8 @@ Graphical representation of the results was done with R [@r2020] and the package
 
 # Results
 
-The quality analysis with BUSCO did show lower completeness for the local available Illumina assembly of *D. coeliaca*, which was improved with our ONP reads from the practical course. Because of the low length of fragments we did stop the minION sequencing early to save resources for the other groups in the course, the report for the minION sequencing is online and publicly available as PDF on github^[https://github.com/chrishah/AMEB_2020_practical/blob/master/assembly-long/MinION/sequencing_reports/minion_report_Dceol_010720.pdf]. Therefore, we used the local assembly from Illumina sequences, without ONP reads, for further analysis. The BUSCO analysis for the assembly of *L. minor*, which only included the minION data and was done by another group in the course, did result in 87 BUSCO genes and was included in the further analysis.
+Because of the low length of fragments we did stop the minION sequencing early to save resources for the other groups in the course, the report for the minION sequencing is online and publicly available as PDF on github^[https://github.com/chrishah/AMEB_2020_practical/blob/master/assembly-long/MinION/sequencing_reports/minion_report_Dceol_010720.pdf].
+The analysis with BUSCO did show a lower completeness for the locally available Illumina assembly of *D. coeliaca* paired with our ONP reads from the practical course. Therefore, we only used the local assembly from Illumina sequences, without the generated ONP reads, for further analysis. The BUSCO analysis for the assembly of *L. minor*, which only included the minION data and was done by another group in the course, did result in 87 BUSCO genes and was included in the further analysis.
 
 ```{r genetree, fig.cap="Singel gene phylogenetic trees for genes available for all given taxa.", echo=FALSE, fig.width = 2}
 knitr::include_graphics("data/gene_tree.pdf")
